avro_derive/tests/ui/avro_rs_501_tuple_struct.stderr
error: AvroSchema derive does not work for tuple structs
  --> tests/ui/avro_rs_501_tuple_struct.rs:21:1
   |
21 | struct B(i32, String);
   | ^^^^^^^^^^^^^^^^^^^^^^
